<resources>
    <string name="app_name">Yuva</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_yet_registered_hint">Not Yet Registered?</string>
    <string name="action_register">Register</string>
    <string name="ContDsc">Yuva Foundation</string>
    <string name="content_desc">Yuva Foundation</string>
    <string name="title_activity_home">Yuva</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_item1">LogOut</string>
    <string name="txt_publish">Publish</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_blood_doners">Blood Doners</string>
    <string name="txt_donate_money">Donate Money</string>
    <string name="txt_events">Events</string>
    <string name="txt_galley">Galley</string>
    <string name="content_desc_gallery">click here to open Gallery</string>
    <string name="content_desc_events">click here to open Events</string>
    <string name="content_desc_donate_money">click here to open Donate Money</string>
    <string name="content_desc_blood_doners">click here to open Blood doners list</string>
    <string name="content_desc_edit_profile">click here to open Edit profile</string>
    <string name="content_desc_publish">click here to open publish</string>
    <string name="menu_item2">About</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">user name</string>
    <string name="content_desc_profile_picture">you clicked on profile picture</string>

    <string-array name="blood_group_list">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
</resources>