<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <GridLayout
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:id="@+id/publish_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/content_desc_publish"
                    android:src="@drawable/publish" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_publish"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:id="@+id/edit_profile_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/profile"
                    android:contentDescription="@string/content_desc_edit_profile" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_edit_profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:id="@+id/blood_doner_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/img_blood"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/content_desc_blood_doners"
                    android:src="@drawable/blood" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_blood_doners"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:id="@+id/donate_money_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_money"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/donate_money"
                    android:contentDescription="@string/content_desc_donate_money" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_donate_money"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:id="@+id/events_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_event"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/notes"
                    android:contentDescription="@string/content_desc_events" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_events"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_gallery"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/gallery"
                    android:contentDescription="@string/content_desc_gallery" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_galley"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>
</LinearLayout>
</ScrollView>